syntax = "proto3";

package vartrack.v1;

import "vartrack/v1/models/datasources/mongo.proto";
import "buf/validate/validate.proto";

message DataSource {
  oneof config {
    // FIXED: Changed (buf.validate.field) to (buf.validate.oneof)
    option (buf.validate.oneof).required = true;

    MongoConfig mongo = 1;
  }
}